--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -19,7 +19,6 @@ html.reveal-full-page {
 	height: 100%;
 	height: 100vh;
 	height: calc( var(--vh, 1vh) * 100 );
-	height: 100svh;
 	overflow: hidden;
 }
 
@@ -32,8 +31,6 @@ html.reveal-full-page {
 
 	background-color: #fff;
 	color: #000;
-
-	--r-controls-spacing: 12px;
 }
 
 // Force the presentation to cover the full viewport when we
@@ -51,14 +48,11 @@ html.reveal-full-page {
  * VIEW FRAGMENTS
  *********************************************/
 
-.reveal .fragment {
+.reveal .slides section .fragment {
+	opacity: 0;
+	visibility: hidden;
 	transition: all .2s ease;
-
-	&:not(.custom) {
-		opacity: 0;
-		visibility: hidden;
-		will-change: opacity;
-	}
+	will-change: opacity;
 
 	&.visible {
 		opacity: 1;
@@ -70,7 +64,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.grow {
+.reveal .slides section .fragment.grow {
 	opacity: 1;
 	visibility: inherit;
 
@@ -79,7 +73,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.shrink {
+.reveal .slides section .fragment.shrink {
 	opacity: 1;
 	visibility: inherit;
 
@@ -88,7 +82,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.zoom-in {
+.reveal .slides section .fragment.zoom-in {
 	transform: scale( 0.1 );
 
 	&.visible {
@@ -96,7 +90,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-out {
+.reveal .slides section .fragment.fade-out {
 	opacity: 1;
 	visibility: inherit;
 
@@ -106,7 +100,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.semi-fade-out {
+.reveal .slides section .fragment.semi-fade-out {
 	opacity: 1;
 	visibility: inherit;
 
@@ -116,7 +110,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.strike {
+.reveal .slides section .fragment.strike {
 	opacity: 1;
 	visibility: inherit;
 
@@ -125,7 +119,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-up {
+.reveal .slides section .fragment.fade-up {
 	transform: translate(0, 40px);
 
 	&.visible {
@@ -133,7 +127,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-down {
+.reveal .slides section .fragment.fade-down {
 	transform: translate(0, -40px);
 
 	&.visible {
@@ -141,7 +135,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-right {
+.reveal .slides section .fragment.fade-right {
 	transform: translate(-40px, 0);
 
 	&.visible {
@@ -149,7 +143,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-left {
+.reveal .slides section .fragment.fade-left {
 	transform: translate(40px, 0);
 
 	&.visible {
@@ -157,8 +151,8 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-in-then-out,
-.reveal .fragment.current-visible {
+.reveal .slides section .fragment.fade-in-then-out,
+.reveal .slides section .fragment.current-visible {
 	opacity: 0;
 	visibility: hidden;
 
@@ -168,7 +162,7 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.fade-in-then-semi-out {
+.reveal .slides section .fragment.fade-in-then-semi-out {
 	opacity: 0;
 	visibility: hidden;
 
@@ -183,32 +177,32 @@ html.reveal-full-page {
 	}
 }
 
-.reveal .fragment.highlight-red,
-.reveal .fragment.highlight-current-red,
-.reveal .fragment.highlight-green,
-.reveal .fragment.highlight-current-green,
-.reveal .fragment.highlight-blue,
-.reveal .fragment.highlight-current-blue {
+.reveal .slides section .fragment.highlight-red,
+.reveal .slides section .fragment.highlight-current-red,
+.reveal .slides section .fragment.highlight-green,
+.reveal .slides section .fragment.highlight-current-green,
+.reveal .slides section .fragment.highlight-blue,
+.reveal .slides section .fragment.highlight-current-blue {
 	opacity: 1;
 	visibility: inherit;
 }
-	.reveal .fragment.highlight-red.visible {
+	.reveal .slides section .fragment.highlight-red.visible {
 		color: #ff2c2d
 	}
-	.reveal .fragment.highlight-green.visible {
+	.reveal .slides section .fragment.highlight-green.visible {
 		color: #17ff2e;
 	}
-	.reveal .fragment.highlight-blue.visible {
+	.reveal .slides section .fragment.highlight-blue.visible {
 		color: #1b91ff;
 	}
 
-.reveal .fragment.highlight-current-red.current-fragment {
+.reveal .slides section .fragment.highlight-current-red.current-fragment {
 	color: #ff2c2d
 }
-.reveal .fragment.highlight-current-green.current-fragment {
+.reveal .slides section .fragment.highlight-current-green.current-fragment {
 	color: #17ff2e;
 }
-.reveal .fragment.highlight-current-blue.current-fragment {
+.reveal .slides section .fragment.highlight-current-blue.current-fragment {
 	color: #1b91ff;
 }
 
@@ -274,11 +268,13 @@ $controlsArrowAngleActive: 36deg;
 }
 
 .reveal .controls {
+	$spacing: 12px;
+
 	display: none;
 	position: absolute;
 	top: auto;
-	bottom: var(--r-controls-spacing);
-	right: var(--r-controls-spacing);
+	bottom: $spacing;
+	right: $spacing;
 	left: auto;
 	z-index: 11;
 	color: #000;
@@ -510,9 +506,7 @@ $controlsArrowAngleActive: 36deg;
 // Edge aligned controls layout
 @media screen and (min-width: 500px) {
 
-	.reveal-viewport {
-		--r-controls-spacing: 0.8em;
-	}
+	$spacing: 0.8em;
 
 	.reveal .controls[data-controls-layout="edges"] {
 		& {
@@ -532,24 +526,24 @@ $controlsArrowAngleActive: 36deg;
 
 		.navigate-left {
 			top: 50%;
-			left: var(--r-controls-spacing);
+			left: $spacing;
 			margin-top: -$controlArrowSize*0.5;
 		}
 
 		.navigate-right {
 			top: 50%;
-			right: var(--r-controls-spacing);
+			right: $spacing;
 			margin-top: -$controlArrowSize*0.5;
 		}
 
 		.navigate-up {
-			top: var(--r-controls-spacing);
+			top: $spacing;
 			left: 50%;
 			margin-left: -$controlArrowSize*0.5;
 		}
 
 		.navigate-down {
-			bottom: calc(var(--r-controls-spacing) - #{$controlArrowSpacing} + 0.3em);
+			bottom: $spacing - $controlArrowSpacing + 0.3em;
 			left: 50%;
 			margin-left: -$controlArrowSize*0.5;
 		}
@@ -729,8 +723,6 @@ $controlsArrowAngleActive: 36deg;
 
 .reveal .slides>section.past,
 .reveal .slides>section.future,
-.reveal .slides>section.past>section,
-.reveal .slides>section.future>section,
 .reveal .slides>section>section.past,
 .reveal .slides>section>section.future {
 	opacity: 0;
@@ -1445,8 +1437,7 @@ $overlayHeaderPadding: 5px;
 	width: 100%;
 	height: 100%;
 	z-index: 1000;
-	background: rgba( 0, 0, 0, 0.95 );
-	backdrop-filter: blur( 6px );
+	background: rgba( 0, 0, 0, 0.9 );
 	transition: all 0.3s ease;
 }
 
@@ -1590,6 +1581,7 @@ $overlayHeaderPadding: 5px;
 		padding-bottom: 20px;
 	}
 
+
 /*********************************************
  * PLAYBACK COMPONENT
  *********************************************/
@@ -1637,10 +1629,6 @@ $overlayHeaderPadding: 5px;
 
 .reveal .hljs.has-highlights tr:not(.highlight-line) {
 	opacity: 0.4;
-}
-
-.reveal .hljs.has-highlights.fragment {
-	transition: all .2s ease;
 }
 
 .reveal .hljs:not(:first-child).fragment {
@@ -1807,43 +1795,6 @@ $notesWidthPercent: 25%;
 
 
 /*********************************************
- * JUMP-TO-SLIDE COMPONENT
- *********************************************/
-
- .reveal .jump-to-slide {
-	position: absolute;
-	top: 15px;
-	left: 15px;
-	z-index: 30;
-	font-size: 32px;
-	-webkit-tap-highlight-color: rgba( 0, 0, 0, 0 );
-}
-
-.reveal .jump-to-slide-input {
-	background: transparent;
-	padding: 8px;
-	font-size: inherit;
-	color: currentColor;
-	border: 0;
-}
-.reveal .jump-to-slide-input::placeholder {
-	color: currentColor;
-	opacity: 0.5;
-}
-
-.reveal.has-dark-background .jump-to-slide-input {
-	color: #fff;
-}
-.reveal.has-light-background .jump-to-slide-input {
-	color: #222;
-}
-
-.reveal .jump-to-slide-input:focus {
-	outline: none;
-}
-
-
-/*********************************************
  * ZOOM PLUGIN
  *********************************************/
 
@@ -1864,239 +1815,6 @@ $notesWidthPercent: 25%;
 
 .zoomed .reveal .roll span:after {
 	visibility: hidden;
-}
-
-
-/*********************************************
- * SCROLL VIEW
- *********************************************/
-.reveal-viewport.loading-scroll-mode {
-	visibility: hidden;
-}
-
-.reveal-viewport.reveal-scroll {
-	& {
-		margin: 0 auto;
-		overflow: auto;
-		overflow-x: hidden;
-		overflow-y: auto;
-		z-index: 1;
-
-		--r-scrollbar-width: 7px;
-		--r-scrollbar-trigger-size: 5px;
-		--r-controls-spacing: 8px;
-	}
-
-	@media screen and (max-width: 500px) {
-		--r-scrollbar-width: 3px;
-		--r-scrollbar-trigger-size: 3px;
-	}
-
-	.controls,
-	.progress,
-	.playback,
-	.backgrounds,
-	.slide-number,
-	.speaker-notes {
-		display: none !important;
-	}
-
-	.overlay,
-	.pause-overlay {
-		position: fixed;
-	}
-
-	.reveal {
-		overflow: visible;
-		touch-action: manipulation;
-	}
-
-	.slides {
-		position: static;
-		pointer-events: initial;
-
-		left: auto;
-		top: auto;
-		width: 100% !important;
-		margin: 0;
-		padding: 0;
-
-		overflow: visible;
-		display: block;
-
-		perspective: none;
-		perspective-origin: 50% 50%;
-	}
-
-	.scroll-page {
-		position: relative;
-		width: 100%;
-		height: calc(var(--page-height) + var(--page-scroll-padding));
-		z-index: 1;
-		overflow: visible;
-	}
-
-	.scroll-page-sticky {
-		position: sticky;
-		height: var(--page-height);
-		top: 0px;
-	}
-
-	.scroll-page-content {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
-	}
-
-	.scroll-page section {
-		visibility: visible !important;
-		display: block !important;
-		position: absolute !important;
-		width: var(--slide-width) !important;
-		height: var(--slide-height) !important;
-		top: 50% !important;
-		left: 50% !important;
-		opacity: 1 !important;
-		transform: scale(var(--slide-scale)) translate(-50%, -50%) !important;
-		transform-style: flat !important;
-		transform-origin: 0 0 !important;
-	}
-
-	.slide-background {
-		display: block !important;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: auto !important;
-		visibility: visible;
-		opacity: 1;
-		touch-action: manipulation;
-	}
-}
-
-// Chromium
-.reveal-viewport.reveal-scroll[data-scrollbar="true"]::-webkit-scrollbar,
-.reveal-viewport.reveal-scroll[data-scrollbar="auto"]::-webkit-scrollbar {
-  display: none;
-}
-
-// Firefox
-.reveal-viewport.reveal-scroll[data-scrollbar="true"],
-.reveal-viewport.reveal-scroll[data-scrollbar="auto"] {
-  scrollbar-width: none;
-}
-
-.reveal.has-dark-background,
-.reveal-viewport.has-dark-background {
-	--r-overlay-element-bg-color: 240, 240, 240;
-	--r-overlay-element-fg-color: 0, 0, 0;
-}
-.reveal.has-light-background,
-.reveal-viewport.has-light-background {
-	--r-overlay-element-bg-color: 0, 0, 0;
-	--r-overlay-element-fg-color: 240, 240, 240;
-}
-
-.reveal-viewport.reveal-scroll .scrollbar {
-	position: sticky;
-	top: 50%;
-	z-index: 20;
-	opacity: 0;
-	transition: all 0.3s ease;
-
-	&.visible,
-	&:hover {
-		opacity: 1;
-	}
-
-	.scrollbar-inner {
-		position: absolute;
-		width: var(--r-scrollbar-width);
-		height: calc(var(--viewport-height) - var(--r-controls-spacing) * 2);
-		right: var(--r-controls-spacing);
-		top: 0;
-		transform: translateY(-50%);
-		border-radius: var(--r-scrollbar-width);
-		z-index: 10;
-	}
-
-	.scrollbar-playhead {
-		position: absolute;
-		width: var(--r-scrollbar-width);
-		height: var(--r-scrollbar-width);
-		top: 0;
-		left: 0;
-		border-radius: var(--r-scrollbar-width);
-		background-color: rgba(var(--r-overlay-element-bg-color), 1);
-		z-index: 11;
-		transition: background-color 0.2s ease;
-	}
-
-	.scrollbar-slide {
-		position: absolute;
-		width: 100%;
-		background-color: rgba(var(--r-overlay-element-bg-color), 0.2);
-		box-shadow: 0 0 0px 1px rgba(var(--r-overlay-element-fg-color), 0.1);
-		border-radius: var(--r-scrollbar-width);
-		transition: background-color 0.2s ease;
-	}
-
-	// Hit area
-	.scrollbar-slide:after {
-		content: '';
-		position: absolute;
-		width: 200%;
-		height: 100%;
-		top: 0;
-		left: -50%;
-		background: rgba( 0, 0, 0, 0 );
-		z-index: -1;
-	}
-
-	.scrollbar-slide:hover,
-	.scrollbar-slide.active {
-		background-color: rgba(var(--r-overlay-element-bg-color), 0.4);
-	}
-
-	.scrollbar-trigger {
-		position: absolute;
-		width: 100%;
-		transition: background-color 0.2s ease;
-	}
-
-	.scrollbar-slide.active.has-triggers {
-		background-color: rgba(var(--r-overlay-element-bg-color), 0.4);
-		z-index: 10;
-	}
-
-	.scrollbar-slide.active .scrollbar-trigger:after {
-		content: '';
-		position: absolute;
-		width: var(--r-scrollbar-trigger-size);
-		height: var(--r-scrollbar-trigger-size);
-		border-radius: 20px;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		background-color: rgba(var(--r-overlay-element-bg-color), 1);
-		transition: transform 0.2s ease, opacity 0.2s ease;
-		opacity: 0.4;
-	}
-
-	.scrollbar-slide.active .scrollbar-trigger.active:after,
-	.scrollbar-slide.active .scrollbar-trigger.active ~ .scrollbar-trigger:after {
-		opacity: 1;
-	}
-
-	.scrollbar-slide.active .scrollbar-trigger ~ .scrollbar-trigger.active:after {
-		transform: translate(calc( var(--r-scrollbar-width) * -2), 0);
-		background-color: rgba(var(--r-overlay-element-bg-color), 1);
-	}
 }
 
 
